--- a/UIRecorder/JupiterUIRecorder.csproj
+++ b/UIRecorder/JupiterUIRecorder.csproj
@@ -5,8 +5,8 @@
     <Platform Condition=" '$(Platform)' == '' ">x64</Platform>
     <ProjectGuid>{C88C446D-AF0D-411C-865D-0A60F5456F38}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>WinAppDriverUIRecorder</RootNamespace>
-    <AssemblyName>WinAppDriverUIRecorder</AssemblyName>
+    <RootNamespace>JupiterUIRecorder</RootNamespace>
+    <AssemblyName>JupiterUIRecorder</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -71,7 +71,7 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>WinAppDriverUIRecorder.App</StartupObject>
+    <StartupObject>JupiterUIRecorder.App</StartupObject>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationIcon>icon.ico</ApplicationIcon>
